# llic_rs

./: .gitignore  .gitmodules  CLAUDE.md  COMPRESSION_TABLES_GUIDE.md  Cargo.toml  LICENSE  LLIC_FORMAT_SPEC.md  README.md  build.rs  convert_table.py  debug_patterns.zsh  decode_test_files.zsh  mise.toml  test_decode_patterns.zsh  test_patterns_full.zsh
.cargo/: config.toml
.github/workflows/: ci.yml  wasm.yml
benches/: llic_benchmark.rs
demo/: index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
scripts/: setup-hooks.sh
scripts/hooks/: pre-commit
src/: entropy_coder.rs  ffi.rs  lib.rs  lossy.rs  main.rs  pgm.rs  wasm.rs
src/entropy_coder/: bit_reader.rs  bit_writer.rs  decompress_table.rs  tables.rs  u8v1_compress.rs  u8v1_decompress.rs
test_data/: checkerboard_16x16_q1.llic  checkerboard_16x16_q4.llic  checkerboard_16x16_rust.pgm  compress_all.sh  generate_test_images.py  gradient_4x4_q0.llic  gradient_4x4_rust.pgm  gradient_8x8.pgm  gradient_8x8_q0_1thread.llic  gradient_8x8_q1.llic  gradient_8x8_q2.llic  gradient_8x8_q3.llic  gradient_8x8_q4.llic  gradient_8x8_rust.pgm  gradient_8x8_rust_1thread.pgm  gradient_8x8_rust_fixed.pgm  patterns_64x64.pgm  patterns_64x64_q0.llic  patterns_64x64_q1.llic  patterns_64x64_q2.llic  patterns_64x64_q3.llic  patterns_64x64_q4.llic  zeros_4x4_q0.llic
test_data/compressed/: checker_1_16x16_q0.llic  checker_1_16x16_q1.llic  checker_1_16x16_q2.llic  checker_1_16x16_q3.llic  checker_1_16x16_q4.llic  checker_1_64x64_q0.llic  checker_1_64x64_q1.llic  checker_1_64x64_q2.llic  checker_1_64x64_q3.llic  checker_1_64x64_q4.llic  checker_2_16x16_q0.llic  checker_2_16x16_q1.llic  checker_2_16x16_q2.llic  checker_2_16x16_q3.llic  checker_2_16x16_q4.llic  checker_2_64x64_q0.llic  checker_2_64x64_q1.llic  checker_2_64x64_q2.llic  checker_2_64x64_q3.llic  checker_2_64x64_q4.llic  checker_4_16x16_q0.llic  checker_4_16x16_q2.llic  checker_4_16x16_q3.llic  checker_4_64x64_q0.llic  checker_4_64x64_q1.llic  checker_4_64x64_q2.llic  checker_4_64x64_q3.llic  checker_4_64x64_q4.llic  checker_8_16x16_q0.llic  checker_8_16x16_q1.llic  checker_8_16x16_q2.llic  checker_8_16x16_q3.llic  checker_8_16x16_q4.llic  checker_8_64x64_q0.llic  checker_8_64x64_q1.llic  checker_8_64x64_q2.llic  (+142 more)
tests/: encoder_roundtrip.rs  reference_comparison.rs
(+106 files in other folders)
